# taylen

./: .gitignore  LICENSE  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
app/: admin.py  apps.py  bot.py  models.py  views.py
app/commands/: avatar_command.py  help_command.py  mmr_command.py  ping_command.py  pong_command.py  record_command.py  splitwise_command.py  steal_command.py
app/discord/: discord_client.py  discord_grammar.py
app/management/commands/: backfill_emoji_urls.py  backfill_emojis.py  conclude_emoji_matches.py  start_emoji_matches.py
app/migrations/: 0001_initial.py  0002_auto_20191226_2121.py  0003_emoji_emojimatch.py  0004_auto_20200109_0400.py  0005_auto_20200109_0442.py  0006_emojimatch_tied.py  0007_emoji_image_url.py  0008_auto_20200130_0353.py  0009_auto_20200201_0514.py  0010_auto_20200201_0519.py
app/slack/: slack_client.py  slack_grammar.py
app/src/: bot.py
app/src/commands/: avatar_command.py  help_command.py  mmr_command.py  ping_command.py  pong_command.py  record_command.py  splitwise_command.py  steal_command.py
app/src/discord/: discord_client.py
app/src/slack/: slack_client.py  slack_grammar.py
app/src/util/: chunker.py
app/templates/: emoji_tree.html
taylen/: asgi.py  urls.py  wsgi.py
taylen/settings/: common.py  development.py  production.py
