[tool.poetry]
name = "taylen"
version = "1.0.0"
description = "A slack bot of many talents"

license = "MIT"

authors = [
    "Tristan Ohlson <tsohlson@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/tso/taylen"
homepage = "https://github.com/tso/taylen"

keywords = ['django', 'slack']

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
django = "^3.0.1"
pyparsing = "^2.4.6"
splitwise = "^1.1.0"
django_heroku = "^0.3.1"
psycopg2 = "^2.8.4"
gunicorn = "^20.0.4"
slackclient = "^2.5.0"
price-parser = "^0.3.1"
"discord.py" = "^1.2.5"
django-redis-cache = "^2.1.0"
requests = "^2.22.0"
django-constance = {extras = ["database"], version = "^2.5.0"}
django-grappelli = "^2.13.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
